# tg_x_rag

./: .public_env  LICENSE  README.md  pyproject.toml
tg_x_rag/: bot.py
tg_x_rag/chroma/: chroma.sqlite3
tg_x_rag/handlers/: help.py  query.py  rag_docs.py  start.py
tg_x_rag/rag/: database.py  embedding.py  query.py
tg_x_rag/utils/: config.py  keyboards.py
